--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "Fahad Yousaf Mahar",
-            "email": "fahadyousafmahar(at)gmail(dot)com",
+            "email": "fahadyousafmahar@gmail.com",
             "homepage": "https://github.com/fahadyousafmahar",
             "role": "Developer"
         }
